@@ -1,3 +1,7 @@
+2014-09-02  Carl Hetherington  <cth@carlh.net>
+
+	* Improve behaviour of batch converter window when it is shrunk (#338).
+
 2014-09-01  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.73.1 released.
